# corgi_sim

./: .gitignore  README.md
controllers/RT-control/: CMakeLists.txt  RT-control.cpp  process_data.ipynb  tools.h
controllers/RT-control/input_csv/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv
controllers/RT-control/output_csv/: test.csv
controllers/RobotSetup/: RobotSetup.cpp  RobotSetup.hpp  Tools.cpp
controllers/csv_control/: CMakeLists.txt  RobotSetup.hpp  csv_control  csv_control.cpp  tools.hpp
controllers/csv_control/input_csv/: stair3_W27_H17.csv  test.csv
controllers/csv_control/output_csv/: test.csv
controllers/data/: Force Plate.csv  output_leg.csv
controllers/force_control/: CMakeLists.txt  ForceTracking.cpp  ForceTracking.hpp  RobotSetup.cpp  RobotSetup.hpp  force_control.cpp  lpf.cpp  pid.cpp  pid.hpp  tools.cpp
controllers/force_control/protos/: sensor.proto
controllers/force_plate/: Force Plate 1.csv  Force Plate 2.csv  Force Plate 3.csv  Force Plate 4.csv  Force Plate.csv  force_plate.py
controllers/include/: tools.cpp  tools.hpp
controllers/leg_control/: leg_control.py
controllers/rt_control/: CMakeLists.txt  RobotSetup.cpp  RobotSetup.hpp  output_robot.csv  rt_control.cpp  tools.hpp
controllers/rt_control/protos/: power.proto
controllers/single_leg/: output_leg.csv  single_leg.py
protos/: corgi.proto  leg.proto
worlds/: .corgi_default.wbproj  .corgi_force_plate.wbproj  .corgi_single_leg.wbproj  .corgi_single_leg_without_mass.wbproj  corgi_default.wbt  corgi_force_plate.wbt  corgi_leg.wbt  corgi_single_leg.wbt  corgi_single_leg_without_mass.wbt  corgi_stair.wbt
